Increased version to 1.3.2-SNAPSHOT